--- a/index.html
+++ b/index.html
@@ -1,33 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="css/main.css">
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
+
 <body>
 
-  Equilibrium #3429
+  <main>
+    <div class="card">
 
-  Our Equilibrium collection promotes balance and calm.
+      <figure>
+        <img src="image-equilibrium" alt="Equilibrium Image">
+      </figure>
 
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
+      <h2>Equilibrium #3429</h2>
+      <p>Our Equilibrium collection promotes balance and calm</p>
 
-  <div class="attribution">
+      <div class="price-and-time">
+
+        <div class="price">
+          <img src="/images/icon-ethereum.svg" alt="Ethereum Icon" class="ethereum">
+          <h6>0.041 ETH</h6>
+        </div>
+
+        <div class="time">
+          <img src="/images/icon-clock.svg" alt="Clock Icon" class="clock">
+          <p>3 days left</p>
+        </div>
+
+      </div>
+
+      <div class="creator">
+        <img src="/images/image-avatar.png" alt="Creator Profile Image" class="pfp">
+        <h2>Creation of <span>Jules Wyvern</span></h2>
+      </div>
+    </div>
+  </main>
+
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Siddhant Singh</a>.
+  </div> -->
 </body>
+
 </html>
