--- a/index.html
+++ b/index.html
@@ -17,31 +17,32 @@
 
   <main>
     <div class="card">
+      <div class="card__content">
+        <figure>
+          <img src="/images/image-equilibrium.jpg" alt="Equilibrium Image">
+        </figure>
 
-      <figure>
-        <img src="image-equilibrium" alt="Equilibrium Image">
-      </figure>
+        <h2>Equilibrium #3429</h2>
+        <p>Our Equilibrium collection promotes balance and calm</p>
 
-      <h2>Equilibrium #3429</h2>
-      <p>Our Equilibrium collection promotes balance and calm</p>
+        <div class="price-and-time">
 
-      <div class="price-and-time">
+          <div class="price">
+            <img src="/images/icon-ethereum.svg" alt="Ethereum Icon" class="ethereum">
+            <h6>0.041 ETH</h6>
+          </div>
 
-        <div class="price">
-          <img src="/images/icon-ethereum.svg" alt="Ethereum Icon" class="ethereum">
-          <h6>0.041 ETH</h6>
+          <div class="time">
+            <img src="/images/icon-clock.svg" alt="Clock Icon" class="clock">
+            <p>3 days left</p>
+          </div>
+
         </div>
 
-        <div class="time">
-          <img src="/images/icon-clock.svg" alt="Clock Icon" class="clock">
-          <p>3 days left</p>
+        <div class="creator">
+          <img src="/images/image-avatar.png" alt="Creator Profile Image" class="pfp">
+          <p>Creation of <span>Jules Wyvern</span></p>
         </div>
-
-      </div>
-
-      <div class="creator">
-        <img src="/images/image-avatar.png" alt="Creator Profile Image" class="pfp">
-        <h2>Creation of <span>Jules Wyvern</span></h2>
       </div>
     </div>
   </main>
