overlay effect add and final commit

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="card__content">
         <figure>
           <img src="/images/image-equilibrium.jpg" alt="Equilibrium Image">
+          <div class="overlay">
+            <img src="/images/icon-view.svg" alt="">
+          </div>
         </figure>
 
         <h2>Equilibrium #3429</h2>
