--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
         </div>
       </div>
     </div>
+
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Siddhant Singh</a>.
+    </div>
   </main>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Siddhant Singh</a>.
-  </div> -->
 </body>
 
 </html>
