--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="card">
       <div class="card__content">
         <figure>
-          <img src="/images/image-equilibrium.jpg" alt="Equilibrium Image">
+          <img src="images/image-equilibrium.jpg" alt="Equilibrium Image">
           <div class="overlay">
-            <img src="/images/icon-view.svg" alt="">
+            <img src="images/icon-view.svg" alt="">
           </div>
         </figure>
 
@@ -31,26 +31,26 @@
         <div class="price-and-time">
 
           <div class="price">
-            <img src="/images/icon-ethereum.svg" alt="Ethereum Icon" class="ethereum">
+            <img src="images/icon-ethereum.svg" alt="Ethereum Icon" class="ethereum">
             <h6>0.041 ETH</h6>
           </div>
 
           <div class="time">
-            <img src="/images/icon-clock.svg" alt="Clock Icon" class="clock">
+            <img src="images/icon-clock.svg" alt="Clock Icon" class="clock">
             <p>3 days left</p>
           </div>
 
         </div>
 
         <div class="creator">
-          <img src="/images/image-avatar.png" alt="Creator Profile Image" class="pfp">
+          <img src="images/image-avatar.png" alt="Creator Profile Image" class="pfp">
           <p>Creation of <span>Jules Wyvern</span></p>
         </div>
       </div>
     </div>
 
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Siddhant Singh</a>.
     </div>
   </main>
